- Recent Alerts : when in list there is no alert set "no record found" - Fix horizontal scrolling in table view for today's mint page - if it is in mobile view ,pve twitter and discord to top- bold labels - Chart view padding adjust - home page layout in columns set - when mobile in size 330 "labels" must be adjust - mint schedule text information change from red to bold - in google doc link add bundle generation steps with screenshot of each

--- a/src/components/FoxTokenCharts.scss
+++ b/src/components/FoxTokenCharts.scss
@@ -4,8 +4,20 @@
         width: 360px;    
         padding-left: 0 !important;
     }
+    @media screen and(max-width:414px) {
+        width: 400px;    
+        padding-left: 0 !important;
+    }
+    @media screen and(max-width:393px) {
+        width: 375px; 
+        padding-left: 0 !important;   
+    }
+    @media screen and(max-width:375px) {
+        width: 350px; 
+        padding-left: 0 !important;   
+    }
     @media screen and(max-width:360px) {
-        width: 300px; 
+        width: 350px; 
         padding-left: 0 !important;   
     }
     @media screen and(max-width:320px) {
@@ -14,6 +26,9 @@
     }
 }
 .foxTokenCharts {
+    @media screen and(max-width:768px) { 
+        padding-left: 0 !important;
+    }
     @media screen and(max-width:425px) { 
         padding-left: 0 !important;
     }
@@ -27,6 +42,9 @@
 
 .MuiTableCell-paddingNone:last-child {
     @media screen and(max-width:425px) {
+        padding: 0 !important;
+    }
+    @media screen and(max-width:1000px) {
         padding: 0 !important;
     }
 }
